--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .btn {
-    @apply inline-flex items-center justify-center rounded-md border border-primary-400 hover:border-primary-600 bg-white hover:bg-primary-900 text-center text-base text-primary-200 font-medium leading-snug shadow-md hover:shadow-none transition duration-200 ease-in focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-blue-200 py-3 px-6 md:px-8;
+    @apply inline-flex items-center justify-center rounded-md border border-accent-400 hover:border-accent-600 bg-white hover:bg-accent-900 text-center text-base text-text-50 font-medium leading-snug shadow-md hover:shadow-none transition duration-200 ease-in focus:ring-2 focus:ring-accent-500 focus:ring-offset-2 focus:ring-offset-accent-200 py-3 px-6 md:px-8;
   }
 
   .btn-ghost {
@@ -14,7 +14,7 @@
   }
 
   .btn-primary {
-    @apply border-primary-400 hover:border-primary-900 bg-primary-400 hover:bg-primary-900 font-semibold text-primary-950 hover:text-primary-100;
+    @apply border-accent-500 hover:border-accent-700 bg-accent-500 hover:bg-accent-700 font-semibold text-background-950 hover:text-text-50;
   }
 
   .card {
