--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -10,7 +10,7 @@
   }
 
   .btn-ghost {
-    @apply border-none bg-transparent text-gray-700 dark:text-gray-400 dark:hover:text-white hover:text-gray-900 shadow-none;
+    @apply border-none bg-transparent text-gray-700 hover:text-gray-900 shadow-none;
   }
 
   .btn-primary {
@@ -18,7 +18,7 @@
   }
 
   .card {
-    @apply rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow px-6 py-8 w-full;
+    @apply rounded-lg backdrop-blur border border-gray-200 bg-white shadow px-6 py-8 w-full;
   }
 
   .ribbon {
